[package]
name = "minecraftp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
gl = "0.14.0"
glam = "0.27.0"
glfw = "0.55.0"
noise = "0.9.0"
rand = "0.8.5"
tokio = {version="1.38.0", features=["full"]}
